--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -3,8 +3,18 @@
 <p>Email: <%= @trainer.email if @trainer.email %></p>
 <p>Pokemons:</p>
 <% @trainer.pokemons.each do |pokemon| %>
-<p> Name:<%= pokemon.name%>, Level:<%= pokemon.level%>, Health:<%= pokemon.health%>
-<%= button_to "Damage!", damage_path(idPokemon: pokemon, idTrainer: @trainer), :class => "button medium", :method => :patch %> </p>
+  <% if @trainer == current_trainer%>	
+	<p> Name:<%= pokemon.name%>, Level:<%= pokemon.level%>, Health:<%= pokemon.health%>
+	<%= button_to "Damage!", damage_path(idPokemon: pokemon, idTrainer: @trainer), :class => "button medium", :method => :patch %>
+	<%= button_to "Heal!", heal_path(idPokemon: pokemon, idTrainer: @trainer), :class => "button medium", :method => :patch %> 
+	</p>
+  <% else %>
+    <% if pokemon.health > 0 %>
+      <p> Name:<%= pokemon.name%>, Level:<%= pokemon.level%>, Health:<%= pokemon.health%>
+	  <%= button_to "Damage!", damage_path(idPokemon: pokemon, idTrainer: @trainer), :class => "button medium", :method => :patch %>
+	  </p>
+	<% end %>
+  <% end %>
 <% end %>
 <% if @trainer == current_trainer%>
 	<%= button_to "Create New", new_pokemon_path(), :class => "button medium", :method => :get %>
